Add basic logic of the qlog.

--- a/src/views/base.html
+++ b/src/views/base.html
@@ -8,10 +8,12 @@
 			{{template "header" .}}
 			<div>
 		</header>
-		<div>
+		 
+		<div class="container">
 			{{template "body" .}}
 		</div>
-		<footer>
+			 
+		<footer class="container">
 			<div>
 				{{template "footer" .}}
 			</div>
