--- a/src/views/head.html
+++ b/src/views/head.html
@@ -1,4 +1,14 @@
 <head>
  <meta charset='utf-8'>
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css"></link>
+<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css"></link>
+<link type="text/css" rel="stylesheet" href="/static/css/main.css"></link>
+<!-- Latest compiled and minified JavaScript -->
+<script type="text/javascript" src="/static/js/jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="/static/js/main.js"></script>
+
 </head>
