--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,32 @@
 {{define "body"}}
-fuck
-{{.}}
+
+<form action="/" method="POST" role="form" class="query-form">
+	<div class="form-group">
+		<label for="bucket">空间</label>
+		<select name="bucket" class="form-control">
+			{{range .Buckets}}
+			<option value="{{.}}">{{.}}</option>
+			{{end}}
+		</select>	
+	</div>
+	<div class="form-group">
+		<label for="date">日期</label>
+		<input type="text" value="" name="date" class="form-control"
+		 placeholder="YY-MM-DD"/>	
+	</div>
+	<div class="form-group">
+		<label for="type">类型</label>
+		<select name="type" class="form-control"></select>
+	</div>
+	<div class="form-group">
+		<input type="submit" value="查询" class="btn btn-info"/>
+	</div>
+</form>
+
+{{if nempty .Error}}
+<div class="alert alert-danger" role="alert">{{.Error}}</div>
+{{end}}
+
 {{end}}
  
  
