--- a/src/views/base.html
+++ b/src/views/base.html
@@ -13,7 +13,7 @@
 			{{template "body" .}}
 		</div>
 			 
-		<footer class="container">
+		<footer>
 			<div>
 				{{template "footer" .}}
 			</div>
