--- a/src/views/header.html
+++ b/src/views/header.html
@@ -5,8 +5,9 @@
 
     <div class="collapse navbar-collapse" id="menu-navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#">日志查询</a></li>
-            <li><a href="#">设置</a></li>
+        	<li><a href="/">预处理</a></li>
+            <li><a href="/query">查询</a></li>
+            <li><a href="/settings">设置</a></li>
         </ul>
     </div>
 </div>
