--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -1,3 +1,65 @@
 {{define "body"}}
+<div class="settings-form">
+	<p class="title">添加日志源空间</p>
+	<form action="{{urlFor "/settings/add"}}" method="POST" role="form" id="settings-form">
+		<div class="form-group">
+			<label for="bucket">日志源空间</label>
+			<input type="text" name="bucket" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<label for="saveBucket">日志保存空间</label>
+			<input type="text" name="saveBucket" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<label for="saveBucketDomain">日志保存空间的域名</label>
+			<input type="text" name="saveBucketDomain" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<label>日志保存空间类型</label><br/>
+			<input type="radio" name="isSaveBucketPrivate" value="0"></input>&nbsp;<span>公开空间</span>
+			<input type="radio" name="isSaveBucketPrivate" value="1"></input>&nbsp;<span>私有空间</span>
+		</div>
+		<div class="form-group">
+			<input type="submit" value="保存" class="btn btn-info"/>
+		</div>
+	</form>
+	{{if nempty .Error}}
+		<div class="alert alert-danger" role="alert">{{.Error}}</div>
+	{{end}}
+	<div class="alert alert-danger" role="alert" style="display:none;" id="settings-form-error"></div>
+	<div class="alert alert-info" role="alert" style="display:none;" id="settings-form-info"></div>
+</div>
+<div class="settings-group">
+	<table class="table" id="settings-group">
+		<thead>
+			<tr>
+				<th>日志源空间</th>
+				<th>日志保存空间</th>
+				<th>日志保存空间域名</th>
+				<th>日志保存空间类型</th>
+				<th>操作</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{range .SettingsAll}}
+			<tr>
+				<td class="col1">{{.Bucket}}</td>
+				<td class="col2">{{.SaveBucket}}</td>
+				<td class="col3">{{.SaveBucketDomain}}</td>
+				<td class="col4">
+					{{if .IsSaveBucketPrivate}}
+					私有空间 <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+					{{else}}
+					公开空间
+					{{end}}
+				</td>
+				<td>
+					<button class="edit-settings-btn btn btn-xs btn-primary" sid={{.Bucket}}>修改</button>
+					<button class="delete-settings-btn btn btn-xs btn-danger" sid={{.Bucket}}>删除</button>
+				</td>
+			</tr>		
+			{{end}}
+		</tbody>
 
+</div>
 {{end}}
