--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -7,7 +7,7 @@ body{
 	font-weight: bold;
 }
 
-.settings-form,.prepare-form{
+.settings-form,.prepare-form,.query-form{
 	max-width: 400px;
 	padding: 10px;
 	border-radius: 5px;
